--- a/index.html
+++ b/index.html
@@ -1,93 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="assets/css/style.css" />
-    
-    <title>Work Day Scheduler</title>
-  </head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      <table class="table table-bordered">
-        <thead>
-          <tr>
-          </tr>
-        </thead>
-        <tbody>
-            <tr>
-            <th>9am</th>
-            <td><textarea class="toDo" id = "toDoNine"></textarea></td>
-            <td><button class = "saveBtn" onclick="save()"><i class="far fa-save"></i></button></td>
-          </tr>
-          <tr>
-            <th>10am</th>
-            <td><textarea class="toDo" id = "toDoTen"></textarea></td>
-            <td><button class = "saveBtn" onclick="save()"><i class="far fa-save"></i></button></td>
-          </tr>
-          <tr>  
-            <th>11am</th>
-            <td><textarea class="toDo" id = "toDoEleven"></textarea></td>
-            <td><button class = "saveBtn" onclick="save()"><i class="far fa-save"></i></button></td>
-          </tr>
-          <tr>
-            <th>12pm</th>
-            <td><textarea class="toDo" id = "toDoTwelve"></textarea></td>
-            <td><button class = "saveBtn" onclick="save()"><i class="far fa-save"></i></button></td>
-          </tr>
-          <tr>
-            <th>1pm</th>
-            <td><textarea class="toDo" id = "toDoOne"></textarea></td>
-            <td><button class = "saveBtn" onclick="save()"><i class="far fa-save"></i></button></td>
-          </tr>
-          <tr>
-            <th>2pm</th>
-            <td><textarea class="toDo" id = "toDoTwo"></textarea></td>
-            <td><button class = "saveBtn" onclick="save()"><i class="far fa-save"></i></button></td>
-          </tr>
-          <tr>
-            <th>3pm</th>
-            <td><textarea class="toDo" id = "toDoThree"></textarea></td>
-            <td><button class = "saveBtn" onclick="save()"><i class="far fa-save"></i></button></td>
-          </tr>
-          <tr>
-            <th>4pm</th>
-            <td><textarea class="toDo" id ="toDoFour"></textarea></td>
-            <td><button class = "saveBtn" onclick="save()"><i class="far fa-save"></i></button></td>
-            <tr>
-              <th>5pm</th>
-              <td><textarea class="toDo" id = "toDoFive"></textarea></td>
-              <td><button class = "saveBtn" onclick="save()"><i class="far fa-save"></i></button></td>
-            </tr>
-          </tr>
-        </tbody>
-      </table>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="assets/css/style.css" />
 
-    </div>
+  <title>Work Day Scheduler</title>
+</head>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="script.js"></script>
-  </body>
+<body>
+  <header class="jumbotron">
+    <h1 class="display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar app for scheduling your work day</p>
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <div class="container">
+    <table class="table table-bordered">
+      <thead>
+        <tr>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th>9am</th>
+          <td><textarea class="toDo" id="toDoNine"></textarea></td>
+          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+        </tr>
+        <tr>
+          <th>10am</th>
+          <td><textarea class="toDo" id="toDoTen"></textarea></td>
+          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+        </tr>
+        <tr>
+          <th>11am</th>
+          <td><textarea class="toDo" id="toDoEleven"></textarea></td>
+          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+        </tr>
+        <tr>
+          <th>12pm</th>
+          <td><textarea class="toDo" id="toDoTwelve"></textarea></td>
+          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+        </tr>
+        <tr>
+          <th>1pm</th>
+          <td><textarea class="toDo" id="toDoOne"></textarea></td>
+          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+        </tr>
+        <tr>
+          <th>2pm</th>
+          <td><textarea class="toDo" id="toDoTwo"></textarea></td>
+          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+        </tr>
+        <tr>
+          <th>3pm</th>
+          <td><textarea class="toDo" id="toDoThree"></textarea></td>
+          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+        </tr>
+        <tr>
+          <th>4pm</th>
+          <td><textarea class="toDo" id="toDoFour"></textarea></td>
+          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+        <tr>
+          <th>5pm</th>
+          <td><textarea class="toDo" id="toDoFive"></textarea></td>
+          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+        </tr>
+        </tr>
+      </tbody>
+    </table>
+
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+  <script src="script.js"></script>
+</body>
+
 </html>
