Finished Color Coding

--- a/index.html
+++ b/index.html
@@ -22,54 +22,52 @@
   </header>
   <div class="container">
     <table class="table table-bordered">
-      <thead>
-        <tr>
-        </tr>
+      <thead> 
       </thead>
       <tbody>
-        <tr>
+        <tr class="time9">
           <th>9am</th>
-          <td><textarea class="toDo" id="toDoNine"></textarea></td>
-          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+          <td><textarea class="toDo text9" id="toDoNine"></textarea></td>
+          <td><button class="saveBtn" value="9"><i class="far fa-save"></i></button></td>
         </tr>
-        <tr>
+        <tr class="time10">
           <th>10am</th>
-          <td><textarea class="toDo" id="toDoTen"></textarea></td>
-          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+          <td><textarea class="toDo text10" id="toDoTen"></textarea></td>
+          <td><button class="saveBtn" value="10"><i class="far fa-save"></i></button></td>
         </tr>
-        <tr>
+        <tr class="time11">
           <th>11am</th>
-          <td><textarea class="toDo" id="toDoEleven"></textarea></td>
-          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+          <td><textarea class="toDo text11" id="toDoEleven"></textarea></td>
+          <td><button class="saveBtn" value="11"><i class="far fa-save"></i></button></td>
         </tr>
-        <tr>
+        <tr class="time12">
           <th>12pm</th>
-          <td><textarea class="toDo" id="toDoTwelve"></textarea></td>
-          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+          <td><textarea class="toDo text12" id="toDoTwelve"></textarea></td>
+          <td><button class="saveBtn" value="12"><i class="far fa-save"></i></button></td>
         </tr>
-        <tr>
+        <tr class="time13">
           <th>1pm</th>
-          <td><textarea class="toDo" id="toDoOne"></textarea></td>
-          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+          <td><textarea class="toDo text13" id="toDoThirteen"></textarea></td>
+          <td><button class="saveBtn" value="13"><i class="far fa-save"></i></button></td>
         </tr>
-        <tr>
+        <tr class="time14">
           <th>2pm</th>
-          <td><textarea class="toDo" id="toDoTwo"></textarea></td>
-          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+          <td><textarea class="toDo text14" id="toDoFourteen"></textarea></td>
+          <td><button class="saveBtn" value="14"><i class="far fa-save"></i></button></td>
         </tr>
-        <tr>
+        <tr class="time15">
           <th>3pm</th>
-          <td><textarea class="toDo" id="toDoThree"></textarea></td>
-          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+          <td><textarea class="toDo text15" id="toDoFifteen"></textarea></td>
+          <td><button class="saveBtn" value="15"><i class="far fa-save"></i></button></td>
         </tr>
-        <tr>
+        <tr class="time16">
           <th>4pm</th>
-          <td><textarea class="toDo" id="toDoFour"></textarea></td>
-          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
-        <tr>
+          <td><textarea class="toDo text16" id="toDoSixteen"></textarea></td>
+          <td><button class="saveBtn" value="16"><i class="far fa-save"></i></button></td>
+        <tr class="time17">
           <th>5pm</th>
-          <td><textarea class="toDo" id="toDoFive"></textarea></td>
-          <td><button class="saveBtn"><i class="far fa-save"></i></button></td>
+          <td><textarea class="toDo text17" id="toDoSeventeen"></textarea></td>
+          <td><button class="saveBtn" value="17"><i class="far fa-save"></i></button></td>
         </tr>
         </tr>
       </tbody>
